# Teamlock

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-image-dev.yml  docker-image-version.yml  docker-image.yml
backend/: Dockerfile  Teamlock.postman_collection.json  exceptions.py  main.py  pyproject.toml  requirements.txt  settings.py
backend/apps/auth/: routers.py  schema.py  tools.py
backend/apps/config/: models.py  routers.py  schema.py
backend/apps/folder/: models.py  routers.py  schema.py
backend/apps/key/: models.py  routers.py  schema.py
backend/apps/secret/: models.py  routers.py  schema.py
backend/apps/trash/: models.py  schema.py
backend/apps/user/: models.py  routers.py  schema.py
backend/apps/workspace/: models.py  routers.py  schema.py
backend/tests/: main.py  tools.py  variables.py
backend/toolkits/: bson.py  const.py  crypto.py  exceptions.py  folder.py  history.py  import_utils.py  mail.py  mongo.py  paginate.py  redis_tools.py  schema.py  secret.py  utils.py  workspace.py
backend/toolkits/migrations/: __init__.py  migrations.py
backend/toolkits/templates/mails/: mail.html
backend/toolkits/templates/mails/assets/css/: style.css
frontend/: .env.development  .env.production  forge.config.js  package-lock.json  package.json  vue.config.js
frontend/public/: index.html  preload.js
frontend/src/: App.vue  background.js  main.js
frontend/src/assets/: style.css
frontend/src/components/: AppBar.vue  InfoWorkspace.vue  Notification.vue  Treeview.vue  (+4 more)
(+70 files in other folders)
